Overhauled Ability logic, including interfaces and data storage classes touched up on cooldown logic Refactored packages to be more organized Added utility classes (sounds, armorstands, particles, hitboxes) Coded Bug class logic